Fix Header sides spacing

--- a/src/scss/custom-properties/_header.scss
+++ b/src/scss/custom-properties/_header.scss
@@ -7,7 +7,4 @@
 
     --theme-header-links-spacing-setting: 32;
     --theme-header-links-spacing: calc( var(--theme-header-links-spacing-setting) * var(--theme-style-manager-fluid-unit) );
-
-    --theme-header-sides-spacing-setting: 48;
-    --theme-header-sides-spacing: calc( var(--theme-header-sides-spacing-setting) * var(--theme-style-manager-fluid-unit) );
 }
